fix: fix <p> font-size in section hero on mobile @media

--- a/src/style/scss/home/media.scss
+++ b/src/style/scss/home/media.scss
@@ -67,6 +67,9 @@ $font: 'Inter', sans-serif;
                     font-size: 2.63rem;
 
                 }
+                p {
+                    width: 316px;
+                }
             }
         }
         .favorite {
